--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>schedule</title>
+    <title>PremierLeague</title>
   </head>
   <body>
     <div id="app"></div>
