--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="yes"> -->
     
     <meta name="HandheldFriendly" content="true" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Phaser App">
@@ -15,6 +16,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="shortcut icon" sizes="128x128" href="<%= BASE_URL %>favicon.ico">
+    <link rel="shortcut icon" sizes="196x196" href="<%= BASE_URL %>favicon.ico">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="apple-touch-icon" sizes="76x76" href="<%= BASE_URL %>favicon.ico">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%= BASE_URL %>favicon.ico">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%= BASE_URL %>favicon.ico">
     <title>PremierLeague</title>
   </head>
   <body>
